# Liquibot

./: .gitignore  Cargo.toml  README.md  notes.txt
contracts/src/: Liquidator.sol
src/: event_processor.rs  interfaces.rs  lib.rs  liquidator.rs  main.rs  oracle.rs  state.rs  stream.rs  util.rs
src/db/: mod.rs
src/state/: mod.rs
